--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://francisco-tovar.github.io/titi-nails-simple/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -20,9 +22,5 @@
     "gh-pages": "^6.3.0",
     "typescript": "^5.3.3",
     "vite": "^4.4.9"
-  },
-  "homepage": "https://francisco-tovar.github.io/titi-nails-simple/",
-  "scripts": {
-    "deploy": "gh-pages -d dist"
   }
 }
